fix header z-index

--- a/src/assets/Header/Header.css
+++ b/src/assets/Header/Header.css
@@ -42,7 +42,7 @@ p:hover {
   width: 100vw;
   max-height: 100vh;
   position: relative;
-  z-index: 1;
+  z-index: 5;
 }
 
 .modalmain {
