--- a/src/assets/Home/Home.css
+++ b/src/assets/Home/Home.css
@@ -37,7 +37,7 @@ body {
   align-items: center;
   width: 100vw;
   height: 100vh;
-  z-index: 100;
+  z-index: 1;
   text-shadow: 2px 3px 5px rgba(0,0,0,0.5);
   p, h1 {
     margin: 0;
